Resolves: tdf#156411 listen to "value-changed" not "changed"

we were listening to "changed" and querying the "value", but the value
isn't guaranteed to have changed while the contents are being edited,
only when "value-changed" arrives.

Change-Id: I077051555813df48adae4259aa9a93d39c360dc3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154907
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>